# NDIPlayer

./: .gitignore  CLAUDE.md  README-Devolay.md  README-NativeSDK.md  README.md  settings.gradle.kts
NDI/: NDI SDK License Agreement.txt  Version.txt
NDI/examples/C++/: Makefile
NDI/examples/C++/NDIlib_Send_VirtualPTZ/: NDIlib_Send_VirtualPTZ.cpp
NDI/licenses/: libndi_licenses.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndi_jni.cpp
app/src/main/java/com/tanda/ndiplayer/: MainActivity.kt
app/src/main/java/com/tanda/ndiplayer/ndi/: NDI.kt  SimpleDevolayTest.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
docs/devolay/: API_REFERENCE.md  DEVOLAY_SETUP.md  ENVIRONMENT_SETUP.md  EXAMPLES.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
